force-app/main/default/objects/ICX_Repair_Center__mdt/ICX_Repair_Center__mdt.object-meta.xml
<CustomObject>
    <label>ICX Repair Center</label>
    <pluralLabel>ICX Repair Centers</pluralLabel>
</CustomObject>