force-app/main/default/objects/ICX_Repair_Center__mdt/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <length>50</length>
    <type>Text</type>
</CustomField>