force-app/main/default/objects/ICX_Repair_Center__mdt/listViews/All_Repair_Center.listView-meta.xml
<ListView>
    <fullName>All_Repair_Center</fullName>
    <columns>MasterLabel</columns>
    <columns>Store__c</columns>
    <columns>Type__c</columns>
    <columns>Id__c</columns>
    <columns>Name__c</columns>
    <columns>Country__c</columns>
    <columns>State__c</columns>
    <columns>City__c</columns>
    <columns>Zip__c</columns>
    <columns>Address__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Repair Center</label>
    <language>en_US</language>
</ListView>